--- a/styles/common.less
+++ b/styles/common.less
@@ -1,6 +1,6 @@
 
 /** 超出滚动隐藏滚动条*/
-.scroll_hiden_bar{
+.scroll_bar_hidden{
   scrollbar-width: none; //兼容火狐
   -ms-overflow-style: none; //兼容IE10+
   &::-webkit-scrollbar {
