--- a/styles/base.less
+++ b/styles/base.less
@@ -106,3 +106,8 @@ a:hover,
 a:focus {
   text-decoration: none;
 }
+
+body,html{
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
