--- a/styles/base.less
+++ b/styles/base.less
@@ -111,3 +111,9 @@ body,html{
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+input:-internal-autofill-previewed,
+input:-internal-autofill-selected {
+  -webkit-text-fill-color: transparent;
+  transition: background-color 5000s ease-out 0.5s;
+}
