--- a/styles/base.less
+++ b/styles/base.less
@@ -112,8 +112,11 @@ body,html{
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-input:-internal-autofill-previewed,
-input:-internal-autofill-selected {
-  -webkit-text-fill-color: transparent;
-  transition: background-color 5000s ease-out 0.5s;
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active {
+	transition-delay: 99999s;
+  transition: color 99999s ease-out, background-color 99999s ease-out;
+  -webkit-text-fill-color: rgba(51, 51, 51, 0.3);
 }
